Fix column 'More' options overlapping when 3-4 columns

--- a/assets/scss/mesh/_structure.scss
+++ b/assets/scss/mesh/_structure.scss
@@ -408,8 +408,52 @@
 			    &:nth-of-type(4) {
 				    padding-left: 26px;
 			    }
-		    }
+
+				.mesh-block-meta-dropdown{
+					.left {
+						width: 100%;
+						margin-bottom: 1em;
+
+						label {
+							display: block;
+
+							input {
+								display: block;
+								max-width: 100%;
+							}
+						}
+					}
+
+					.right {
+						width: 100%;
+					}
+				}
+			}
 	    }
+
+		&[data-mesh-blocks="4"] {
+			~ .mesh-section-block {
+				.mesh-block-meta-dropdown{
+					.left {
+						width: 100%;
+						margin-bottom: 1em;
+
+						label {
+							display: block;
+
+							input {
+								display: block;
+								max-width: 100%;
+							}
+						}
+					}
+
+					.right {
+						width: 100%;
+					}
+				}
+			}
+		}
 	}
 
 	> .mesh-row {
